@@ -23,7 +23,8 @@ int PubSubClient::connect(char *id, char* willTopic, uint8_t willQos, uint8_t wi
       if (_client.connect()) {
          nextMsgId = 1;
          uint8_t d[9] = {0x00,0x06,'M','Q','I','s','d','p',MQTTPROTOCOLVERSION};
-         uint8_t length = 0;
+#if defined (CONFIG_USE_BUFFER_COPY)
+         uint16_t length = 0;
          int j;
          for (j = 0;j<9;j++) {
             buffer[length++] = d[j];
@@ -41,8 +42,32 @@ int PubSubClient::connect(char *id, char* willTopic, uint8_t willQos, uint8_t wi
             length = writeString(willMessage,buffer,length);
          }
          write(MQTTCONNECT,buffer,length);
-         lastOutActivity = millis();
-         lastInActivity = millis();
+#else
+         uint16_t packet_len = 12 + strlen(id) + 2;
+         if (willTopic) {
+             packet_len += strlen(willTopic) + 2 + strlen(willMessage) + 2;
+         }
+         
+         _client.write(MQTTCONNECT);
+         writeRemainingLength(packet_len);
+         _client.write(d, sizeof(d));
+         if (willTopic) {
+             _client.write(0x06|(willQos<<3)|(willRetain<<5));
+         } else {
+             _client.write(0x02);
+         }
+
+         // FIXME - should do proper 16bit write
+         _client.write((uint8_t)0);
+         _client.write(KEEPALIVE/1000);
+         writeString(id, strlen(id));
+         if (willTopic) {
+             writeString(willTopic, strlen(willTopic));
+             writeString(willMessage, strlen(willMessage));
+         }
+#endif
+	 lastOutActivity = millis();
+	 lastInActivity = millis();
          while (!_client.available()) {
             long t= millis();
             if (t-lastInActivity > KEEPALIVE) {
@@ -50,7 +75,7 @@ int PubSubClient::connect(char *id, char* willTopic, uint8_t willQos, uint8_t wi
                return 0;
             }
          }
-         uint8_t len = readPacket();
+         uint16_t len = readPacket();
          
          if (len == 4 && buffer[3] == 0) {
             lastInActivity = millis();
@@ -68,11 +93,11 @@ uint8_t PubSubClient::readByte() {
    return _client.read();
 }
 
-uint8_t PubSubClient::readPacket() {
-   uint8_t len = 0;
+uint16_t PubSubClient::readPacket() {
+   uint16_t len = 0;
    buffer[len++] = readByte();
-   uint8_t multiplier = 1;
-   uint8_t length = 0;
+   uint16_t multiplier = 1;
+   uint16_t length = 0;
    uint8_t digit = 0;
    do {
       digit = readByte();
@@ -81,7 +106,7 @@ uint8_t PubSubClient::readPacket() {
       multiplier *= 128;
    } while ((digit & 128) != 0);
    
-   for (int i = 0;i<length;i++)
+   for (uint16_t i = 0;i<length;i++)
    {
       if (len < MAX_PACKET_SIZE) {
          buffer[len++] = readByte();
@@ -110,7 +135,7 @@ int PubSubClient::loop() {
          }
       }
       if (_client.available()) {
-         uint8_t len = readPacket();
+         uint16_t len = readPacket();
          if (len > 0) {
             lastInActivity = t;
             uint8_t type = buffer[0]&0xF0;
@@ -143,14 +168,15 @@ int PubSubClient::publish(char* topic, char* payload) {
    return publish(topic,(uint8_t*)payload,strlen(payload));
 }
 
-int PubSubClient::publish(char* topic, uint8_t* payload, uint8_t plength) {
+int PubSubClient::publish(char* topic, uint8_t* payload, uint16_t plength) {
    return publish(topic, payload, plength, 0);
 }
 
-int PubSubClient::publish(char* topic, uint8_t* payload, uint8_t plength, uint8_t retained) {
+int PubSubClient::publish(char* topic, uint8_t* payload, uint16_t plength, uint8_t retained) {
    if (connected()) {
-      uint8_t length = writeString(topic,buffer,0);
-      int i;
+#if defined (CONFIG_USE_BUFFER_COPY)
+      uint16_t length = writeString(topic,buffer,0);
+      uint16_t i;
       for (i=0;i<plength;i++) {
          buffer[length++] = payload[i];
       }
@@ -160,15 +186,30 @@ int PubSubClient::publish(char* topic, uint8_t* payload, uint8_t plength, uint8_
       }
       write(header,buffer,length);
       return 1;
+#else
+      uint8_t header = MQTTPUBLISH;
+      if (retained != 0) {
+         header |= 1;
+      }
+      _client.write(header);
+      // topic needs to be preceeded by two bytes indicating the length of that string
+      uint16_t topic_len = strlen(topic);
+      writeRemainingLength(2 + topic_len + plength);      
+      writeString(topic, topic_len);
+      // now finally, payload, using original payload pointer!
+      _client.write(payload, plength);
+      
+#endif
    }
    return 0;
 }
 
 
-int PubSubClient::write(uint8_t header, uint8_t* buf, uint8_t length) {
+int PubSubClient::write(uint8_t header, uint8_t* buf, uint16_t length) {
    _client.write(header);
-   _client.write(length);
-   _client.write(buf,length);
+   // Need to properly write the variable length header.
+   writeRemainingLength(length);
+   _client.write(buf, length);
    lastOutActivity = millis();
    return 0;
 }
@@ -176,13 +217,23 @@ int PubSubClient::write(uint8_t header, uint8_t* buf, uint8_t length) {
 
 void PubSubClient::subscribe(char* topic) {
    if (connected()) {
-      uint8_t length = 2;
       nextMsgId++;
+#if defined (CONFIG_USE_BUFFER_COPY)
+      uint16_t length = 2;
       buffer[0] = nextMsgId >> 8;
       buffer[1] = nextMsgId - (buffer[0]<<8);
       length = writeString(topic, buffer,length);
       buffer[length++] = 0; // Only do QoS 0 subs
       write(MQTTSUBSCRIBE,buffer,length);
+#else
+      _client.write(MQTTSUBSCRIBE);
+      // 2 for msgid, 2 for utf8 encoding, 1 for qos flags
+      writeRemainingLength(2 + strlen(topic) + 2 + 1);
+      _client.write(nextMsgId >> 8);
+      _client.write(nextMsgId & 0x00ff);
+      writeString(topic, strlen(topic));
+      _client.write((uint8_t)0);  // only do QoS 0 subs
+#endif
    }
 }
 
@@ -194,9 +245,10 @@ void PubSubClient::disconnect() {
    lastOutActivity = millis();
 }
 
-uint8_t PubSubClient::writeString(char* string, uint8_t* buf, uint8_t pos) {
+#if defined (CONFIG_USE_BUFFER_COPY)
+uint16_t PubSubClient::writeString(char* string, uint8_t* buf, uint16_t pos) {
    char* idp = string;
-   uint8_t i = 0;
+   uint16_t i = 0;
    pos += 2;
    while (*idp) {
       buf[pos++] = *idp++;
@@ -206,7 +258,36 @@ uint8_t PubSubClient::writeString(char* string, uint8_t* buf, uint8_t pos) {
    buf[pos-i-1] = i;
    return pos;
 }
+#else
+int PubSubClient::writeString(char *string, uint16_t strlen) {
+      // big endian string length first...
+      _client.write(strlen >> 8);
+      _client.write(strlen & 0x00ff);
+      _client.write((uint8_t *)string, strlen);
+      return 0;
+}
+#endif
 
+/**
+ * For a given "length" write to the client the variable width field "remainging length"
+ * in the "fixed" header.  (Isn't that wonderfully clear? :)
+ * @param length length of _payload_ plus _variable_ headers
+ * @return just 0
+ */
+int PubSubClient::writeRemainingLength(uint16_t length) {
+    uint16_t len_tmp = length;
+    uint16_t digit;
+    do {
+        digit = len_tmp % 128;
+        len_tmp = len_tmp / 128;
+        // if there are more digits to encode, set the top bit of this digit
+        if (len_tmp > 0) {
+            digit = digit | 0x80;
+        }
+        _client.write(digit);
+    } while (len_tmp > 0);
+    return 0;
+}
 
 int PubSubClient::connected() {
    int rc = (int)_client.connected();
